kubernetes/semaphore/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: semaphore
  namespace: semaphore
spec:
  replicas: 1
  serviceName: semaphore-service
  selector:
    matchLabels:
      app: semaphore
  template:
    metadata:
      labels:
        app: semaphore
    spec:
      containers:
        - name: semaphore
          image: semaphoreui/semaphore:v2.9.36
          ports:
            - name: semaphore
              containerPort: 3000
          volumeMounts:
            - name: semaphore-database
              mountPath: /var/lib/semaphore
            - name: semaphore
              mountPath: /etc/semaphore
  volumeClaimTemplates:
    - metadata:
        name: semaphore-database
      spec:
        accessModes: ["ReadWriteOnce"]
        volumeMode: Filesystem
        resources:
          requests:
            storage: 2Gi
    - metadata:
        name: semaphore
      spec:
        accessModes: ["ReadWriteOnce"]
        volumeMode: Filesystem
        resources:
          requests:
            storage: 2Gi
