kubernetes/semaphore/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: semaphore
  namespace: semaphore
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - semaphore..mydomain.de
    secretName: semaphore..mydomain.de
  rules:
  - host: semaphore..mydomain.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: semaphore
            port:
              number: 3000
